--- a/dashboard.html
+++ b/dashboard.html
@@ -146,7 +146,7 @@
             <div class="gallery">
                 <!-- Foto 1 -->
                 <div class="gallery-item">
-                    <img src="/assets/img/home/IMG_20241110_074615.jpg" alt="Descripción de la foto 1">
+                    <img src="assets/img/home/IMG_20241110_074615.jpg" alt="Descripción de la foto 1">
                     <div class="gallery-description">
                         <p>Nuestro primer día juntos ❤️</p>
                     </div>
@@ -154,7 +154,7 @@
 
                 <!-- Foto 2 -->
                 <div class="gallery-item">
-                    <img src="/assets/img/home/IMG-20241112-WA0000(1).jpg" alt="Descripción de la foto 2">
+                    <img src="assets/img/home/IMG-20241112-WA0000(1).jpg" alt="Descripción de la foto 2">
                     <div class="gallery-description">
                         <p>Un concierto inolvidable 🌳</p>
                     </div>
@@ -162,14 +162,14 @@
 
                 <!-- Foto 3 -->
                 <div class="gallery-item">
-                    <img src="/assets/img/home/IMG-20241228-WA0022(1).jpg" alt="Descripción de la foto 3">
+                    <img src="assets/img/home/IMG-20241228-WA0022(1).jpg" alt="Descripción de la foto 3">
                     <div class="gallery-description">
                         <p>Celebrando navidad juntos 🎉</p>
                     </div>
                 </div>
                 <!-- Foto 3 -->
                 <div class="gallery-item">
-                    <img src="/assets/img/memories/2.png" alt="Descripción de la foto 3">
+                    <img src="assets/img/memories/2.png" alt="Descripción de la foto 3">
                     <div class="gallery-description">
                         <p>Celebrando nuestro aniversario 🎉</p>
                     </div>
@@ -301,14 +301,14 @@
 
             <div class="collage-container">
                 <div class="collage-item">
-                    <img src="\assets\img\home\IMG_20241109_143408.jpg" alt="Descripción de la foto 1"
+                    <img src="assets\img\home\IMG_20241109_143408.jpg" alt="Descripción de la foto 1"
                         style="width: 300px; height: 300px; object-fit: cover;">
                     <div class="overlay">
                         <p>Mi reina</p>
                     </div>
                 </div>
                 <div class="collage-item">
-                    <img src="\assets\img\home\IMG_20241224_161016.png" alt="Descripción de la foto 1"
+                    <img src="assets\img\home\IMG_20241224_161016.png" alt="Descripción de la foto 1"
                         style="width: 300px; height: 300px; object-fit: cover;">
                     <div class="overlay">
                         <p>Mi Esposa </p>
@@ -316,21 +316,21 @@
                 </div>
 
                 <div class="collage-item">
-                    <img src="\assets\img\home\IMG-20241110-WA0055(1).jpg" alt="Descripción de la foto 2"
+                    <img src="assets\img\home\IMG-20241110-WA0055(1).jpg" alt="Descripción de la foto 2"
                         style="width: 300px; height: 300px; object-fit: cover;">
                     <div class="overlay">
                         <p>J&M</p>
                     </div>
                 </div>
                 <div class="collage-item">
-                    <img src="\assets\img\home\IMG-20241228-WA0020(1).jpg" alt="Descripción de la foto 3"
+                    <img src="assets\img\home\IMG-20241228-WA0020(1).jpg" alt="Descripción de la foto 3"
                         style="width: 300px; height: 300px; object-fit: cover;">
                     <div class="overlay">
                         <p>Noche de peliculas</p>
                     </div>
                 </div>
                 <div class="collage-item">
-                    <img src="\assets\img\home\IMG-20241229-WA0035.jpg" alt="Descripción de la foto 4"
+                    <img src="assets\img\home\IMG-20241229-WA0035.jpg" alt="Descripción de la foto 4"
                         style="width: 300px; height: 300px; object-fit: cover;">
                     <div class="overlay">
                         <p>Cocina juntos</p>
@@ -376,7 +376,7 @@
                 <button id="sorpresa-btn" class="sorpresa-btn"><i class="ri-star-smile-line"></i> ¡Haz clic para ver la
                     sorpresa!</button>
                 <div id="sorpresa-content" class="sorpresa-content hidden">
-                    <img src="/assets/img/home/IMG-20241110-WA0055(1).jpg" alt="Sorpresa"
+                    <img src="assets/img/home/IMG-20241110-WA0055(1).jpg" alt="Sorpresa"
                         style="width: 600px; height: 600px; object-fit: cover;">
                     <p>Mi amor hermosa 😍❤, feliz 3 meses para nosotros 💖✨. No tienes idea de lo feliz que me hace
                         tenerte en mi vida, eres mi
